:heavy_check_mark: Сборка #8

--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -59,6 +59,7 @@ body {
 }
 
 .container-logo {
+  position: relative;
   background-image: url("../images/index-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -72,8 +73,8 @@ body {
   display: block;
   position: absolute;
   width: 100%;
-  height: 100%;
-  transform: translate(-90px,-69px)
+  height: 59px;
+  bottom: 0;
 }
 
 .page-container {
@@ -110,7 +111,6 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  max-width: 620px;
   margin: 0;
   margin-bottom: 31px;
 }
@@ -141,13 +141,11 @@ body {
 
 .navigation-link-current::before {
   position: absolute;
-  right: 20px;
   bottom: 0;
-  left: 20px;
   top: 65px;
   height: 2px;
   background-color: #756257;
-  width: calc(100% - 34px);
+  width: calc(100% - 2px);
   content: "";
 }
 
@@ -203,7 +201,7 @@ body {
 
 }
 
-.favorite-numbe {
+.favorite-number {
   position: absolute;
   width: 20px;
   height: 20px;
@@ -478,7 +476,7 @@ body {
 
 .appointment-form-email {
   display: flex;
-  margin: 0 auto;
+  margin: 0;
   flex-grow: 1;
 }
 
@@ -495,12 +493,17 @@ body {
 
 .field:hover {
   background: #E6E6E6;
-  border-radius: 4px;
 }
 .field:focus {
   background: #E6E6E6;
   border-color: #83B3D3;
-  border: 3px solid #83B3D3;
+}
+
+.field:disabled,
+.field:disabled:hover {
+  color: #595959;
+  background-color: #FFFFFF;
+  border-color: #000000;
 }
 
 .field:invalid {
@@ -528,7 +531,6 @@ body {
 
 .button-appointment:hover {
   background: #68A2CA;
-  border-radius: 0 10px 10px 0;
   color: #FFFFFF;
 }
 
@@ -547,13 +549,10 @@ body {
 .inner-header-title {
   margin: 0;
   padding: 0;
-
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
   text-transform: uppercase;
-  padding-top: 35px;
-  padding-left: 70px;
   margin-bottom: 10px;
 }
 
@@ -569,10 +568,6 @@ body {
   margin-right: 10px;
   fill: #FFFFFF;
   cursor: pointer;
-}
-
-.breadcrumbs-item:nth-child(1) {
-  margin-left: 72px;
 }
 
 .breadcrumbs-item:hover {
@@ -594,27 +589,6 @@ body {
   border: 2px solid #E5E5E5;
   border-radius: 4px;
 }
-
-/*
-.button-current {
-  border: 2px solid #E5E5E5;
-}
-
-.button-light:hover {
-  border: 2px solid;
-  fill: #000000;
-}
-
-.button-light:active {
-  border: 2px solid;
-  fill: #000000;
-}
-
-.button-light:focus {
-  border: 2px solid;
-  fill: #68A2CA;
-}
-*/
 
 .product-card-title {
   font-weight: 700;
@@ -868,11 +842,12 @@ body {
 
 .container-catalog {
   background-image: url("../images/filter-background.jpg");
-  background-size: 100% auto;
+  background-size: cover;
   border-radius: 0;
   background-repeat: no-repeat;
-  width: 1200px;
-  min-height: 403px;
+  width: 1060px;
+  padding: 70px;
+  padding-top: 35px;
 }
 
 .catalog-products {
@@ -883,64 +858,146 @@ body {
   color: #FFFFFF;
 }
 
-.catalog-filter-title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 26px;
-}
-
-.catalog-filter-infrastructure {
-  width: 150.43px;
+.catalog-filter-type {
   margin: 0;
+  margin-right: 175px;
   padding: 0;
-  margin-right: 70px;
-  margin-left: 70px;
+  width: 125px;
   border: 0;
 }
 
-.catalog-filter-type {
-  width: 125px;
-  margin-right: 176px;
+.catalog-filter-title {
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  text-align: start;
+  margin-bottom: 34px;
+}
+
+.catalog-filter-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.catalog-filter-infrastructure {
+  width: 151px;
+  margin: 0;
+  padding: 0;
+  margin-right: 70px;
   border: 0;
 }
 
 .catalog-filter-price {
+  padding: 0;
+  margin: 0;
   width: 289px;
   margin-right: 70px;
   border: 0;
 }
 
+.catalog-filter-label {
+  position: relative;
+}
+
 .button-catalog {
   display: flex;
   flex-direction: column;
-  margin-right: 70px;
-  margin-left: 70px;
+  justify-content: flex-end;
   padding: 0;
+  margin: 0;
+}
+
+.button-apply {
+  margin: 0;
+  padding: 14px 15px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 21px;
+  background: #82B3D3;
+  border-radius: 4px;
+  min-width: 160px;
+  min-height: 48px;
+}
+
+.button-apply:hover {
+  background: #68A2CA;
+}
+
+.button-apply:active {
+  background: #82B3D3;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button-apply:focus {
+  background: #68A2CA;
+}
+
+.button-off {
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: capitalize;
+  background-color: transparent;
+}
+
+.button-off:hover,
+.button-off:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button-off:focus {
+  border: 3px solid #83B3D3;
+  border-radius: 4px;
 }
 
 .filter-menu {
   display: flex;
-  margin: 0;
-  padding: 0;
-  justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 56px;
+  align-items: center;
+  margin: 55px 71px 57px 72px;
 }
 
 .select {
+  position: relative;
   display: flex;
-  margin: 0;
-  padding: o;
-  justify-content: space-around;
+  margin-right: auto;
   align-items: center;
+  width: 290px;
 }
 
 .select-control {
-margin-right: 207px;
+  width: 100%;
+  padding: 14px 20px;
+  padding-right: 48px;
+  background-color: #FFFFFF;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 21px;
+  cursor: pointer;
+  font: inherit;
+  background-image: url("../images/down-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right 21px center;
+  appearance: none;
 }
 
-.sorting-type {
-  margin-right: 71px;
+.select-control:hover,
+.select-control:focus {
+  border-color: rgba(104, 162, 202, 1);
+}
+
+.select-control:active {
+  border-color: rgba(63, 94, 114, 1);
+}
+
+.select-control:disabled {
+  border-color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .filter-menu .button {
@@ -954,16 +1011,31 @@ margin-right: 207px;
 }
 
 .filter-menu .button-current {
-  border: 2px solid #000000;
-  border-radius: 4px;
+  border-color: #000000;
+}
+
+.button-light:hover {
+  border-color: #000000;
+}
+
+.button-light:active {
+  border-color: #000000;
+}
+
+.button-light:focus,
+.button-current:focus {
+  border-color: rgba(104, 162, 202, 1);
 }
 
 .filter-menu-title {
   margin: 0;
   padding: 0;
-  padding-top: 8px;
-  padding-bottom: 5px;
-  margin-right: 211px;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  margin-right: 191px;
+  white-space: nowrap;
 }
 
 .product-list {
@@ -1041,6 +1113,43 @@ margin-right: 207px;
   margin-right: 71px;
 }
 
+.pagination-select {
+  position: relative;
+  display: flex;
+  margin-right: auto;
+  align-items: center;
+  width: 160px;
+}
+
+.pagination-select-control {
+  width: 100%;
+  padding: 14px 20px;
+  padding-right: 48px;
+  background-color: #FFFFFF;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+  cursor: pointer;
+  font: inherit;
+  background-image: url("../images/down-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right 21px center;
+  appearance: none;
+}
+
+.pagination-select-control:hover,
+.pagination-select-control:focus {
+  border-color: rgba(104, 162, 202, 1);
+}
+
+.pagination-select-control:active {
+  border-color: rgba(63, 94, 114, 1);
+}
+
+.pagination-select-control:disabled {
+  border-color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
+}
+
 .pagination-link {
   display: flex;
   margin: 0 auto;
@@ -1064,4 +1173,145 @@ margin-right: 207px;
 .select-control {
   border: 2px solid #E5E5E5;
   border-radius: 4px;
+}
+
+.range-wrapper-inputs {
+  display: flex;
+  justify-content: center;
+}
+
+.catalog-filter-label {
+  display: flex;
+  position: absolute;
+  top: 15px;
+  right: 14px;
+  opacity: 0.3;
+}
+
+.catalog-filter-input {
+  position: relative;
+}
+
+.range-input {
+  width: 72px;
+  margin-bottom: 32px;
+  padding: 14px 50px 13px 19px;
+  font: inherit;
+  background-color: transparent;
+  appearance: none;
+  border: 2px solid #FFFFFF;
+  border-radius: 4px;
+  color: #FFFFFF;
+}
+
+.range-input-min {
+  border-right: 1px;
+}
+
+.range-input::-webkit-outer-spin-button,
+.range-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.range-scale {
+  position: relative;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #FFFFFF;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #FFFFFF;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 0;
+}
+
+.range-toggle:hover,
+.range-toggle:active {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.range-toggle:focus {
+  background-color: #FFFFFF;
+}
+
+.toggle-min {
+  top: -8px;
+  left: 0;
+}
+
+.toggle-max {
+  top: -8px;
+  right: -9px;
+}
+
+.control {
+  position: relative;
+  display: block;
+  padding-left: 39px;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.control-mark {
+  position: absolute;
+  left: -1px;
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background: #FFFFFF;
+}
+
+.control:hover .control-mark {
+  background: rgba(255, 255, 255, 0.6);
+}
+
+.control:active .control-mark {
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.control:focus .control-mark {
+  background: rgba(255, 255, 255, 0.6);
+  border: 3px solid #83B3D3;
+}
+
+.control-input:disabled + .control-mark {
+  border-color: #242424;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::after {
+  position: absolute;
+  top: 5px;
+  left: 4px;
+  width: 12px;
+  height: 10px;
+  background-image: url("../images/check-mark.svg");;
+  content: "";
+  color: transparent;
+}
+
+.control-input[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+
+.control-input[type="radio"]:checked + .control-mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3F5E72;;
+  border-radius: 50%;
+  content: "";
 }
