--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1174,6 +1174,7 @@ body {
   border: 1px solid #82B3D3;
   border-radius: 4px;
   color: #FFFFFF;
+  text-decoration: none;
 }
 
 .pagination-current {
