--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,7 +158,7 @@ body {
   display: block;
   margin-right: 34px;
   padding-top: 20px;
-  padding-bottom: 17px;
+  padding-bottom: 19px;
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
@@ -224,8 +224,8 @@ body {
 
 .button-user {
   display: inline-block;
-  padding: 9px 15px;
-  margin: 14px 0;
+  padding: 9px 14px;
+  margin-top: 14px;
   width: 160px;
   font-weight: 700;
   font-size: 16px;
