--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,7 @@ body {
 .container {
   margin: 0 auto;
   width: 1200px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .page-header {
