--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1333,3 +1333,13 @@ body {
   border-radius: 50%;
   content: "";
 }
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
