--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1343,3 +1343,17 @@ body {
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
 }
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 62px 70px 70px;
+  background-color: #ffffff;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
+  width: 575px;
+}
+
+.modal-auth {
+  width: 575px;
+}
