--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1342,6 +1342,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
+  z-index: 2;
 }
 
 .modal {
@@ -1381,4 +1382,10 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+}
+
+.modal-content {
+  display: flex;
+  margin: 0;
+  margin-bottom: 70px;
 }
