задает display: flex для полей

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1385,7 +1385,21 @@ body {
 }
 
 .modal-content {
-  display: flex;
   margin: 0;
   margin-bottom: 70px;
+}
+
+.modal-shape {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.grownup {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.child {
+  display: flex;
+  flex-wrap: wrap;
 }
