--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1345,8 +1345,13 @@ body {
   z-index: 2;
 }
 
+/* стиль для закрытия модального окна
+.modal-container-close {
+  display: none;
+}*/
+
 .modal {
-  position: relative;
+  position: fixed;
   margin: auto;
   padding: 62px 70px 70px;
   background-color: #ffffff;
@@ -1391,15 +1396,98 @@ body {
 
 .modal-shape {
   display: flex;
-  flex-wrap: wrap;
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.calendar {
+  position: absolute;
+  top: 18px;
+  right: 17px;
+}
+
+.arrival-date,
+.departure-date {
+  width: 119px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  margin-right: 42px;
+  display: flex;
+  align-items: center;
+}
+
+.text-input {
+  width: 420px;
+  max-height: 50px;
+  background: #F2F2F2;
+  border-radius: 4px;
+  border: 0;
+  padding: 15px 14px 19px;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.date-text {
+  position: absolute;
+  top: 227px;
+  left: 225px;
+  font-size: 16px;
+  line-height: 21px;
+  color: #FF5757;
+  margin: 0;
+}
+
+.text-number {
+  position: absolute;
+  font-size: 16px;
+  line-height: 21px;
+  top: 327px;
+  left: 225px;
+  color: #333333;
+  margin: 0;
+}
+
+.wrapper-buttons {
+  display: flex;
 }
 
 .grownup {
   display: flex;
-  flex-wrap: wrap;
+}
+
+.grownup-label {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  margin-right: 64px;
+  align-items: center;
+  box-sizing: border-box;
+  min-width: 91px;
+}
+
+.wrapper-choice-grownup,
+.wrapper-choice-kids {
+  display: flex;
+  max-height: 50px;
+  min-width: 133px;
+  background: #F2F2F2;
+  border-radius: 4px;
+  border: 0;
+}
+
+.wrapper-choice-grownup {
+  margin-right: 56px;
 }
 
 .child {
   display: flex;
-  flex-wrap: wrap;
+}
+
+.child-label {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  margin-right: 43px;
+  align-items: center;
 }
