--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1450,6 +1450,7 @@ body {
 
 .wrapper-buttons {
   display: flex;
+  margin-bottom: 40px;
 }
 
 .grownup {
@@ -1457,12 +1458,12 @@ body {
 }
 
 .grownup-label {
+  display: flex;
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
   margin-right: 64px;
   align-items: center;
-  box-sizing: border-box;
   min-width: 91px;
 }
 
@@ -1480,11 +1481,45 @@ body {
   margin-right: 56px;
 }
 
+.button-plus,
+.butten-minus {
+  background: #F2F2F2;
+  border-radius: 4px;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  fill: #000000;
+  opacity: 0.3;
+  cursor: pointer;
+}
+
+.minus {
+  padding: 24px 29px 25px 19px;
+}
+
+.plus {
+  padding: 18px 19px 19px 30px;
+}
+
+.grownup-number,
+.child-number  {
+  width: 15px;
+  height: 50px;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  background: #F2F2F2;
+  text-align: center;
+  font-size: 18px;
+  line-height: 21px;
+}
+
 .child {
   display: flex;
 }
 
 .child-label {
+  display: flex;
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
