--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1540,7 +1540,7 @@ body {
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
-  margin-right: 43px;
+  margin-right: 20px;
   align-items: center;
 }
 
@@ -1552,4 +1552,44 @@ body {
   border: 0;
   color: #FFFFFF;
   padding: 12px 26px;
+}
+
+.tooltip {
+  position: absolute;
+  right: 210px;
+}
+
+.tooltip-toggle {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: -12px;
+  right: 10px;
+  display: block;
+  width: 25px;
+  height: 25px;
+  background-image: url(../images/icon-help.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 1px 9px;
+  background-color: #82B3D3;
+  border: none;
+  border-radius: 50%;
+  cursor: help;
+}
+
+.tooltip-text {
+  text-transform: none;
+  font-size: 16px;
+  line-height: 21px;
+  background-color: #333333;
+  color: #FFFFFF;
+  padding: 15px 18px 18px 22px;
+  border-radius: 10px;
+  width: 256px;
+  position: absolute;
+  top: 30px;
+  left: -155px;
+  /*display: none;*/
+  z-index: 1;
 }
