--- a/styles/styles.css
+++ b/styles/styles.css
@@ -565,20 +565,18 @@ body {
 }
 
 .breadcrumbs-item {
-  margin-right: 10px;
+  position: relative;
+  margin-right: 25px;
   fill: #FFFFFF;
   cursor: pointer;
 }
 
-.breadcrumbs-icon {
-  display: block;
+.breadcrumbs-item:not(:last-child)::after {
+  position: absolute;
   width: 5px;
   height: 8px;
-  margin-right: 10px;
-  padding-top: 6px;
-}
-
-.breadcrumbs-icon::after {
+  right: 10px;
+  top: 7px;
   background-image: url(../images/right-arrow.svg);
   background-repeat: no-repeat;
   margin: 0;
