--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1366,6 +1366,7 @@ body {
   left: 0;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
