--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1652,12 +1652,12 @@ body {
 
 .text-input:active {
   background-color: #FFFFFF;
-  border: 2px solid #000000;
+  border: #000000;
 }
 
 .text-input:focus {
   background: #E6E6E6;
-  border: 3px solid #83B3D3;
+  border: #83B3D3;
 }
 
 .button-find:hover {
@@ -1671,7 +1671,7 @@ body {
 
 .button-find:focus {
   background-color: #68A2CA;
-  border: 3px solid #756257;
+  border:  #756257;
 }
 
 .butten-minus:hover {
