добавляет для кнопки box-sizing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,6 +246,7 @@ body {
   border: none;
   text-decoration: none;
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 .navigation-item:hover .button-user {
