--- a/styles/styles.css
+++ b/styles/styles.css
@@ -289,7 +289,6 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  max-width: 400px;
   padding: 92px 85px;
 }
 
@@ -342,6 +341,7 @@ body {
   margin: 0;
   padding: 0;
   margin-bottom: 30px;
+  text-transform: uppercase;
 }
 
 .advantages-city {
