--- a/styles/styles.css
+++ b/styles/styles.css
@@ -338,6 +338,7 @@ body {
 .advantages-item-title {
   font-weight: 700;
   font-size: 24px;
+  line-height: 28px;
   margin: 0;
   padding: 0;
   margin-bottom: 30px;
